fix: search input's clear button overflow

--- a/packages/logos-docusaurus-theme/src/client/theme/SearchBar/SearchInput/SearchInput.module.scss
+++ b/packages/logos-docusaurus-theme/src/client/theme/SearchBar/SearchInput/SearchInput.module.scss
@@ -15,6 +15,10 @@
   width: 100% !important;
 }
 
+.textField button svg {
+  max-height: 100% !important;
+}
+
 .root input {
 }
 
